# Astra

./: ASTRA_INTENT_FEATURE.md  CLAUDE_CODE_SESSION_STARTER.md  DECISIONS.md  TASKS.md
services/conductor-service/: .env.example  Dockerfile  pyproject.toml
services/conductor-service/app/: config.py  main.py
services/conductor-service/app/agent/: graph.py
services/conductor-service/app/agent/artifacts/: adapter.py
services/conductor-service/app/agent/mcp/: json_utils.py  mcp_client.py
services/conductor-service/app/agent/nodes/: capability_executor.py  compute_diffs_vs_baseline.py  diagram_enrichment.py  execute_steps.py  handle_error.py  ingest_request.py  init_mcp_clients.py  input_resolver.py  llm_execution.py  mark_run_completed.py  mark_run_started.py  mcp_execution.py  mcp_input_resolver.py  (+6 more)
services/conductor-service/app/clients/: artifact_service.py  capability_service.py  http_utils.py
services/conductor-service/app/core/: diff_engine.py  identity.py  playbook_runner.py  run_engine.py  validation.py
services/conductor-service/app/db/: mongodb.py  run_repository.py
services/conductor-service/app/events/: rabbit.py  schemas.py
services/conductor-service/app/infra/: telemetry.py
services/conductor-service/app/llm/: base.py  execution_base.py  execution_factory.py  execution_gemini.py  execution_http.py  execution_openai.py  factory.py  gemini_adapter.py  openai_adapter.py  polyllm_agent.py  polyllm_exec.py
services/conductor-service/app/mcp_host/: __init__.py  client_manager.py  discovery_validator.py  factory.py  invoker.py  official_client.py  types.py
services/conductor-service/app/models/: run_models.py
services/conductor-service/app/secrets/: resolver.py
services/raina-input-service/: Dockerfile  pyproject.toml
services/raina-input-service/app/: main.py
services/raina-input-service/app/data/: raina_input.json
(+99 files in other folders)
