[project]
name = "astra-conductor-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "motor>=3.5",
  "orjson>=3.10",
  "aio-pika>=9.4",
  "httpx>=0.27",
  "jsonschema>=4.22",
  "tenacity>=9.0",
  "mcp>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"