[project]
name = "raina-input-service"
version = "0.1.0"
description = "Minimal FastAPI service that returns a Raina input JSON for a given pack_id."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","UP"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"